--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">محاسبه شاخص توده بدنی</string>
-    <string name="bmi">محاسبه</string>
-    <string name="calculator">شاخص توده بدنی</string>
-    <string name="weight">قد</string>
-    <string name="height">وزن</string>
+    <string name="bmi">شاخص توده بدنی</string>
+    <string name="calculator">محاسبه</string>
+    <string name="weight">وزن</string>
+    <string name="height">قد</string>
 </resources>
